# vulkan_renderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Vulkan_Cheat_Sheet.docx  setup.ps1  setup.sh
cmake/: CompileShaders.cmake
shaders/: compile.sh  simple_shader.frag  simple_shader.vert  triangle.vert
src/: first_app.cpp  first_app.hpp  lve_device.cpp  lve_device.hpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_swap_chain.cpp  lve_swap_chain.hpp  lve_window.cpp  lve_window.hpp  main.cpp
